--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
       </div>
       <div class="controls">
         <h4>Couleur : <span id="color">NOIR</span> </h4>
-        <button id="btn-black">✔</button>
-        <button id="btn-beige">✔</button>
-        <button id="btn-brown">✔</button>
+        <button id="btn-black" data-color="black" class="colors">✔</button>
+        <button id="btn-beige" data-color="beige" class="colors">✔</button>
+        <button id="btn-brown" data-color="brown" class="colors">✔</button>
       </div>
       <div class="price">
         <span class="original-price">38,99 €</span>
